// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component in training status matches the previous snapshot 1`] = `
<Footer
  blocked={false}
  currentResults={Array []}
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={true}
>
  <footer
    data-css-ufkewi=""
  >
    <glamorous(div)>
      <div
        className="css-1cqgl9p"
      >
        <FooterButton
          clickHandler={[Function]}
          data-test="failButton"
          disabled={false}
        >
          <button
            disabled={false}
            onClick={[Function]}
          >
            Failed
          </button>
        </FooterButton>
        <FooterButton
          clickHandler={[Function]}
          data-test="doneButton"
          disabled={false}
        >
          <button
            disabled={false}
            onClick={[Function]}
          >
            Done
          </button>
        </FooterButton>
      </div>
    </glamorous(div)>
  </footer>
</Footer>
`;

exports[`Footer component snapshot blocked matches the previous snapshot 1`] = `
<Footer
  blocked={true}
  currentResults={Array []}
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={false}
>
  <footer
    data-css-ufkewi=""
  >
    <glamorous(div)>
      <div
        className="css-1cqgl9p"
      >
        <FooterButton
          clickHandler={[Function]}
          disabled={true}
        >
          <button
            disabled={true}
            onClick={[Function]}
          >
            Starting ...
          </button>
        </FooterButton>
      </div>
    </glamorous(div)>
  </footer>
</Footer>
`;

exports[`Footer component snapshot not blocked matches the mounted snapshot 1`] = `
<Footer
  blocked={false}
  currentResults={Array []}
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={false}
>
  <footer
    data-css-ufkewi=""
  >
    <glamorous(div)>
      <div
        className="css-1cqgl9p"
      >
        <FooterButton
          clickHandler={[Function]}
          disabled={false}
        >
          <button
            disabled={false}
            onClick={[Function]}
          >
            Start Workout
          </button>
        </FooterButton>
      </div>
    </glamorous(div)>
  </footer>
</Footer>
`;

exports[`Footer component snapshot not blocked matches the rendered snapshot 1`] = `
<footer
  data-css-ufkewi=""
>
  <div
    class="css-1cqgl9p"
  >
    <button>
      Start Workout
    </button>
  </div>
</footer>
`;
